// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ==========================================
// ORGANIZATION
// ==========================================

model Currency {
  code      String   @id // MXN | USD | EUR
  name      String
  symbol    String
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  chains      Chain[]
  restaurants Restaurant[]
  settlements Settlement[]
}

model TaxGroup {
  id        String   @id @default(uuid())
  name      String // IVA 16 | IEPS 8 | Exento
  rateBps   Int // 1600 = 16 percent
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  chainDefaults       Chain[]
  restaurantDefaults  Restaurant[]
  restaurantCategories RestaurantCategory[]
  restaurantMenuItems  RestaurantMenuItem[]
}

model TipPreset {
  id           String    @id @default(uuid())
  chainId      String?
  restaurantId String?
  rateBps      Int
  isActive     Boolean   @default(true)
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  chain      Chain?      @relation(fields: [chainId], references: [id], onDelete: Cascade)
  restaurant Restaurant? @relation(fields: [restaurantId], references: [id], onDelete: Cascade)

  @@index([chainId])
  @@index([restaurantId])
}

model Chain {
  id               String   @id @default(uuid())
  createdBy        String
  currency         String
  defaultTaxGroupId String?
  name             String
  logoUrl          String?
  archivedAt       DateTime?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  creator          AppUser        @relation(fields: [createdBy], references: [id])
  defaultTaxGroup  TaxGroup?      @relation(fields: [defaultTaxGroupId], references: [id])
  currencyEntity   Currency       @relation(fields: [currency], references: [code])
  zones            Zone[]
  restaurants      Restaurant[]
  menuTemplates    MenuTemplate[]
  roles            Role[]
  tipPresets       TipPreset[]
  userRoles        UserRole[]

  @@index([createdBy])
  @@index([currency])
  @@index([defaultTaxGroupId])
}

model Zone {
  id         String    @id @default(uuid())
  chainId    String
  name       String
  archivedAt DateTime?
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  chain       Chain        @relation(fields: [chainId], references: [id], onDelete: Cascade)
  restaurants Restaurant[]
  userRoles   UserRole[]

  @@index([chainId])
}

model Restaurant {
  id                  String   @id @default(uuid())
  chainId             String
  zoneId              String?
  currency            String
  defaultTaxGroupId   String?
  name                String
  logoUrl             String?
  welcomeMessage      String?
  address             String?
  allowMobileOrdering Boolean  @default(true)
  allowWaiterJoinTables Boolean @default(false)
  archivedAt          DateTime?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  chain           Chain                  @relation(fields: [chainId], references: [id], onDelete: Cascade)
  zone            Zone?                  @relation(fields: [zoneId], references: [id], onDelete: SetNull)
  currencyEntity  Currency               @relation(fields: [currency], references: [code])
  defaultTaxGroup TaxGroup?              @relation(fields: [defaultTaxGroupId], references: [id])
  stations        Station[]
  categories      RestaurantCategory[]
  userRoles       UserRole[]
  menuItems       RestaurantMenuItem[]
  modifierGroups  ModifierGroup[]
  diningTables    DiningTable[]
  diningSessions  DiningSession[]
  orders          RestaurantOrder[]
  settlements     Settlement[]
  appliedAdjustments AppliedAdjustment[]
  tipPresets      TipPreset[]
  analyticsJobRuns AnalyticsJobRun[]
  analyticSalesDaily AnalyticSalesDaily[]
  analyticItemVelocity AnalyticItemVelocity[]
  analyticServiceTimes AnalyticServiceTimes[]
  analyticDemandEstimate AnalyticDemandEstimate[]

  @@index([chainId])
  @@index([zoneId])
  @@index([currency])
  @@index([defaultTaxGroupId])
}

// ==========================================
// IDENTITY & RBAC
// ==========================================

model Permission {
  id          String   @id @default(uuid())
  code        String   @unique // CREATE_ORDER | VIEW_SETTLEMENTS | MANAGE_ADJUSTMENTS
  description String
  scope       String // RESTAURANT | CHAIN | PLATFORM
  createdAt   DateTime @default(now())

  roles RolePermission[]
}

model Role {
  id          String    @id @default(uuid())
  chainId     String?
  name        String
  scope       String // RESTAURANT | CHAIN | PLATFORM
  description String?
  isBase      Boolean   @default(false) // true = seed
  isActive    Boolean   @default(true)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  chain       Chain?           @relation(fields: [chainId], references: [id], onDelete: Cascade)
  permissions RolePermission[]
  userRoles   UserRole[]

  @@index([chainId])
}

model RolePermission {
  roleId      String
  permissionId String
  assignedAt  DateTime @default(now())

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
  @@index([permissionId])
}

model AppUser {
  id             String   @id @default(uuid())
  email          String   @unique
  passwordHash   String
  firstName      String
  lastName       String
  secondLastName String?
  phone          String?
  isActive       Boolean  @default(true)
  archivedAt     DateTime?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  userRoles            UserRole[]
  chainsCreated        Chain[]
  auditLogs            AuditLog[]
  diningSessionsOpened DiningSession[] @relation("OpenedBy")
  ordersCreated        RestaurantOrder[]
  contributionsRegistered SettlementContribution[]
  adjustmentsApproved  AppliedAdjustment[]
  statusEvents         OrderItemStatusEvent[]
  analyticsJobs        AnalyticsJobRun[]

  @@index([email])
}

model UserRole {
  id           String   @id @default(uuid())
  userId       String
  roleId       String
  contextType  String // PLATFORM | CHAIN | ZONE | RESTAURANT
  chainId      String?
  zoneId       String?
  restaurantId String?
  assignedAt   DateTime @default(now())

  user       AppUser      @relation(fields: [userId], references: [id], onDelete: Cascade)
  role       Role         @relation(fields: [roleId], references: [id], onDelete: Cascade)
  chain      Chain?       @relation(fields: [chainId], references: [id], onDelete: Cascade)
  zone       Zone?        @relation(fields: [zoneId], references: [id], onDelete: Cascade)
  restaurant Restaurant?  @relation(fields: [restaurantId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([roleId])
  @@index([chainId])
  @@index([zoneId])
  @@index([restaurantId])
}

model AuditLog {
  id           String   @id @default(uuid())
  actorUserId  String
  chainId      String?
  restaurantId String?
  action       String // CREATE | UPDATE | DELETE | LOGIN | OPEN_SESSION | CLOSE_SESSION | APPLY_ADJUSTMENT | REGISTER_CONTRIBUTION | RUN_ANALYTICS_JOB
  entityType   String
  entityId     String
  before       Json?
  after        Json?
  metadata     Json?
  ipAddress    String?
  userAgent    String?
  requestId    String?
  createdAt    DateTime @default(now())

  actor AppUser @relation(fields: [actorUserId], references: [id])

  @@index([actorUserId])
  @@index([chainId])
  @@index([restaurantId])
  @@index([action])
  @@index([entityType, entityId])
  @@index([createdAt])
}

// ==========================================
// CATALOG
// ==========================================

model Station {
  id           String   @id @default(uuid())
  restaurantId String
  name         String // COCINA | BARRA
  color        String?
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  restaurant Restaurant         @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  menuItems  RestaurantMenuItem[]
  analytics  AnalyticServiceTimes[]

  @@index([restaurantId])
}

model MenuTemplate {
  id        String   @id @default(uuid())
  chainId   String
  name      String
  isDefault Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  chain      Chain              @relation(fields: [chainId], references: [id], onDelete: Cascade)
  categories TemplateCategory[]

  @@index([chainId])
}

model TemplateCategory {
  id         String   @id @default(uuid())
  templateId String
  name       String
  order      Int      @default(0)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  template MenuTemplate  @relation(fields: [templateId], references: [id], onDelete: Cascade)
  items    TemplateItem[]
  restaurantCategories RestaurantCategory[]

  @@index([templateId])
}

model TemplateItem {
  id          String    @id @default(uuid())
  categoryId  String
  name        String
  description String?
  basePriceCents Int
  imageUrl    String?
  isPopular   Boolean   @default(false)
  archivedAt  DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  category       TemplateCategory         @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  variants       TemplateItemVariant[]
  menuItems      RestaurantMenuItem[]

  @@index([categoryId])
}

model TemplateItemVariant {
  id             String   @id @default(uuid())
  templateItemId String
  name           String
  priceCents     Int
  isAvailable    Boolean  @default(true)
  order          Int      @default(0)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  templateItem       TemplateItem              @relation(fields: [templateItemId], references: [id], onDelete: Cascade)
  restaurantVariants RestaurantMenuItemVariant[]

  @@index([templateItemId])
}

model RestaurantCategory {
  id                 String    @id @default(uuid())
  restaurantId       String
  templateCategoryId String?
  taxGroupId         String?
  name               String
  order              Int       @default(0)
  archivedAt         DateTime?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt

  restaurant     Restaurant         @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  templateCategory TemplateCategory? @relation(fields: [templateCategoryId], references: [id], onDelete: SetNull)
  taxGroup       TaxGroup?          @relation(fields: [taxGroupId], references: [id])
  menuItems      RestaurantMenuItem[]

  @@index([restaurantId])
  @@index([templateCategoryId])
  @@index([taxGroupId])
}

model RestaurantMenuItem {
  id                String    @id @default(uuid())
  restaurantId      String
  categoryId        String
  stationId         String?
  taxGroupId        String?
  templateItemId    String?
  name              String
  description       String?
  priceCents        Int
  imageUrl          String?
  isPopular         Boolean   @default(false)
  isSoldOut         Boolean   @default(false)
  trackStock        Boolean   @default(false)
  stockQuantity     Int?
  lowStockThreshold Int?
  archivedAt        DateTime?
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt

  restaurant  Restaurant                @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  category    RestaurantCategory        @relation(fields: [categoryId], references: [id])
  station     Station?                  @relation(fields: [stationId], references: [id])
  taxGroup    TaxGroup?                 @relation(fields: [taxGroupId], references: [id])
  templateItem TemplateItem?            @relation(fields: [templateItemId], references: [id], onDelete: SetNull)
  variants    RestaurantMenuItemVariant[]
  modifierGroups MenuItemModifierGroup[]
  orderItems  OrderItem[]
  analytics   AnalyticItemVelocity[]
  demandEstimates AnalyticDemandEstimate[]

  @@index([restaurantId])
  @@index([categoryId])
  @@index([stationId])
  @@index([taxGroupId])
  @@index([templateItemId])
}

model RestaurantMenuItemVariant {
  id               String   @id @default(uuid())
  menuItemId       String
  templateVariantId String?
  name             String
  priceCents       Int
  isAvailable      Boolean  @default(true)
  order            Int      @default(0)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  menuItem        RestaurantMenuItem @relation(fields: [menuItemId], references: [id], onDelete: Cascade)
  templateVariant TemplateItemVariant? @relation(fields: [templateVariantId], references: [id], onDelete: SetNull)
  orderItems      OrderItem[]

  @@index([menuItemId])
  @@index([templateVariantId])
}

model ModifierGroup {
  id           String   @id @default(uuid())
  restaurantId String
  name         String
  isRequired   Boolean  @default(false)
  minSelect    Int      @default(0)
  maxSelect    Int      @default(1)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  restaurant Restaurant         @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  options    ModifierOption[]
  menuItems  MenuItemModifierGroup[]

  @@index([restaurantId])
}

model ModifierOption {
  id                  String   @id @default(uuid())
  groupId             String
  name                String
  priceAdjustmentCents Int
  isAvailable         Boolean  @default(true)
  order               Int      @default(0)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  group       ModifierGroup      @relation(fields: [groupId], references: [id], onDelete: Cascade)
  orderItems  OrderItemModifier[]

  @@index([groupId])
}

model MenuItemModifierGroup {
  menuItemId       String
  modifierGroupId  String

  menuItem      RestaurantMenuItem @relation(fields: [menuItemId], references: [id], onDelete: Cascade)
  modifierGroup ModifierGroup      @relation(fields: [modifierGroupId], references: [id], onDelete: Cascade)

  @@id([menuItemId, modifierGroupId])
  @@index([modifierGroupId])
}

// ==========================================
// OPERATIONS
// ==========================================

model DiningTable {
  id         String   @id @default(uuid())
  restaurantId String
  publicCode String   @unique
  number     Int
  capacity   Int
  qrVersion  Int      @default(1)
  status     String   @default("LIBRE") // LIBRE | OCUPADA | NO_DISPONIBLE
  posX       Float    @default(0)
  posY       Float    @default(0)
  shape      String   @default("rect")
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  restaurant  Restaurant          @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  sessions    DiningSessionTable[]

  @@index([restaurantId])
  @@index([publicCode])
}

model DiningSession {
  id                   String    @id @default(uuid())
  restaurantId         String
  openedByUserId       String
  closedByUserId       String?
  status               String    @default("PENDIENTE_ACTIVACION") // PENDIENTE_ACTIVACION | ACTIVA | EN_CONSUMO | POR_LIQUIDAR | LIQUIDADA | CERRADA | CANCELADA
  joinCode             String    @unique
  accessCodeHash       String
  pax                  Int       @default(1)
  openedAt             DateTime  @default(now())
  activatedAt          DateTime?
  firstOrderAt         DateTime?
  liquidationStartedAt DateTime?
  settledAt            DateTime?
  closedAt             DateTime?
  updatedAt            DateTime  @updatedAt

  restaurant  Restaurant          @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  openedBy    AppUser             @relation("OpenedBy", fields: [openedByUserId], references: [id])
  tables      DiningSessionTable[]
  guests      Guest[]
  orders      RestaurantOrder[]
  settlements Settlement[]

  @@index([restaurantId])
  @@index([openedByUserId])
  @@index([joinCode])
  @@index([status])
}

model DiningSessionTable {
  id              String    @id @default(uuid())
  diningSessionId String
  tableId         String
  joinedAt        DateTime  @default(now())
  leftAt          DateTime?

  diningSession DiningSession @relation(fields: [diningSessionId], references: [id], onDelete: Cascade)
  table         DiningTable   @relation(fields: [tableId], references: [id], onDelete: Cascade)

  @@index([diningSessionId])
  @@index([tableId])
}

model Guest {
  id             String    @id @default(uuid())
  diningSessionId String
  name           String?
  seatNumber     Int?
  isHost         Boolean   @default(false)
  isActive       Boolean   @default(true)
  joinedAt       DateTime  @default(now())
  leftAt         DateTime?
  createdAt      DateTime  @default(now())

  diningSession  DiningSession          @relation(fields: [diningSessionId], references: [id], onDelete: Cascade)
  orderItems     OrderItem[]
  allocations    SettlementAllocation[]
  contributions  SettlementContribution[]

  @@index([diningSessionId])
}

model RestaurantOrder {
  id             String   @id @default(uuid())
  restaurantId   String
  diningSessionId String
  createdByUserId String?
  source         String   @default("WAITER") // WAITER | QR | INTERNAL
  status         String   @default("ABIERTA") // ABIERTA | ENVIADA | COMPLETADA | CANCELADA
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  closedAt       DateTime?
  cancelledAt    DateTime?

  restaurant    Restaurant  @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  diningSession DiningSession @relation(fields: [diningSessionId], references: [id], onDelete: Cascade)
  createdBy     AppUser?    @relation(fields: [createdByUserId], references: [id])
  items         OrderItem[]

  @@index([restaurantId])
  @@index([diningSessionId])
  @@index([createdByUserId])
  @@index([status])
}

model OrderItem {
  id                    String   @id @default(uuid())
  orderId               String
  menuItemId            String?
  variantId             String?
  guestId               String?
  stationId             String?
  status                String   @default("PENDIENTE") // PENDIENTE | EN_PREPARACION | LISTA | ENTREGADA | CANCELADA
  quantity              Int      @default(1)
  notes                 String?
  itemNameSnapshot      String
  variantNameSnapshot   String?
  stationNameSnapshot   String?
  taxRateBpsSnapshot    Int
  unitPriceCents        Int
  subtotalCents         Int
  taxAmountCents        Int
  totalCents            Int
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt

  order          RestaurantOrder      @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuItem       RestaurantMenuItem?  @relation(fields: [menuItemId], references: [id])
  variant        RestaurantMenuItemVariant? @relation(fields: [variantId], references: [id])
  guest          Guest?               @relation(fields: [guestId], references: [id])
  modifiers      OrderItemModifier[]
  statusEvents   OrderItemStatusEvent[]
  allocations    SettlementAllocation[]
  adjustments    AppliedAdjustment[]

  @@index([orderId])
  @@index([menuItemId])
  @@index([variantId])
  @@index([guestId])
  @@index([status, updatedAt])
}

model OrderItemModifier {
  id                  String   @id @default(uuid())
  orderItemId         String
  modifierOptionId    String
  nameSnapshot        String
  quantity            Int      @default(1)
  unitAdjustmentCents Int
  totalAdjustmentCents Int
  createdAt           DateTime @default(now())

  orderItem      OrderItem       @relation(fields: [orderItemId], references: [id], onDelete: Cascade)
  modifierOption ModifierOption  @relation(fields: [modifierOptionId], references: [id])

  @@index([orderItemId])
  @@index([modifierOptionId])
}

model OrderItemStatusEvent {
  id            String   @id @default(uuid())
  orderItemId   String
  changedByUserId String?
  fromStatus    String?
  toStatus      String
  createdAt     DateTime @default(now())

  orderItem OrderItem @relation(fields: [orderItemId], references: [id], onDelete: Cascade)
  changedBy AppUser?  @relation(fields: [changedByUserId], references: [id])

  @@index([orderItemId])
  @@index([changedByUserId])
}

// ==========================================
// SETTLEMENT
// ==========================================

model Settlement {
  id                String   @id @default(uuid())
  restaurantId      String
  diningSessionId   String
  currency          String
  status            String   @default("ABIERTA") // ABIERTA | PARCIAL | LIQUIDADA | CANCELADA
  splitMode         String   @default("TOTAL") // TOTAL | POR_ITEM | IGUAL | PERSONALIZADO
  subtotalCents     Int
  discountCents     Int      @default(0)
  tipAmountCents    Int      @default(0)
  taxAmountCents    Int      @default(0)
  totalCents        Int
  amountSettledCents Int     @default(0)
  remainingCents    Int
  notes             String?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
  settledAt         DateTime?

  restaurant    Restaurant             @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  diningSession DiningSession          @relation(fields: [diningSessionId], references: [id], onDelete: Cascade)
  currencyEntity Currency              @relation(fields: [currency], references: [code])
  allocations   SettlementAllocation[]
  contributions SettlementContribution[]
  adjustments   AppliedAdjustment[]

  @@index([restaurantId])
  @@index([diningSessionId])
  @@index([status])
}

model SettlementAllocation {
  id             String   @id @default(uuid())
  settlementId   String
  contributionId String?
  orderItemId    String?
  guestId        String?
  amountCents    Int
  createdAt      DateTime @default(now())

  settlement   Settlement           @relation(fields: [settlementId], references: [id], onDelete: Cascade)
  contribution SettlementContribution? @relation(fields: [contributionId], references: [id])
  orderItem    OrderItem?           @relation(fields: [orderItemId], references: [id])
  guest        Guest?               @relation(fields: [guestId], references: [id])

  @@index([settlementId])
  @@index([contributionId])
  @@index([orderItemId])
  @@index([guestId])
}

model SettlementContribution {
  id                String   @id @default(uuid())
  settlementId      String
  guestId           String?
  registeredByUserId String?
  method            String   @default("CASH") // CASH | OUT_OF_SYSTEM | OTHER
  status            String   @default("REGISTERED") // REGISTERED | VOIDED
  amountCents       Int
  note              String?
  createdAt         DateTime @default(now())

  settlement    Settlement           @relation(fields: [settlementId], references: [id], onDelete: Cascade)
  guest         Guest?               @relation(fields: [guestId], references: [id])
  registeredBy  AppUser?             @relation(fields: [registeredByUserId], references: [id])
  allocations   SettlementAllocation[]

  @@index([settlementId])
  @@index([guestId])
  @@index([registeredByUserId])
}

model AppliedAdjustment {
  id                String   @id @default(uuid())
  restaurantId      String
  orderItemId       String?
  settlementId      String?
  approvedByUserId  String?
  type              String // DISCOUNT | COURTESY
  calculationMode   String // PERCENT | FIXED
  status            String   @default("APPLIED") // APPLIED | VOIDED
  valueBps          Int?
  valueCents        Int?
  amountCents       Int
  reason            String
  description       String?
  createdAt         DateTime @default(now())

  restaurant   Restaurant  @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  orderItem    OrderItem?  @relation(fields: [orderItemId], references: [id])
  settlement   Settlement? @relation(fields: [settlementId], references: [id])
  approvedBy   AppUser?    @relation(fields: [approvedByUserId], references: [id])

  @@index([restaurantId])
  @@index([orderItemId])
  @@index([settlementId])
  @@index([approvedByUserId])
}

// ==========================================
// ANALYTICS
// ==========================================

model AnalyticsJobRun {
  id                String    @id @default(uuid())
  restaurantId      String
  jobType           String // BRONZE | SILVER | GOLD | DEMAND_ESTIMATE | SERVICE_TIMES
  status            String    @default("QUEUED") // QUEUED | RUNNING | COMPLETED | FAILED
  triggeredByUserId String?
  dataWindowStart   DateTime?
  dataWindowEnd     DateTime?
  startedAt         DateTime  @default(now())
  finishedAt        DateTime?
  errorMessage      String?
  metadata          Json?

  restaurant        Restaurant             @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  triggeredBy       AppUser?               @relation(fields: [triggeredByUserId], references: [id])
  salesDaily        AnalyticSalesDaily[]
  itemVelocity      AnalyticItemVelocity[]
  serviceTimes      AnalyticServiceTimes[]
  demandEstimates   AnalyticDemandEstimate[]

  @@index([restaurantId])
  @@index([triggeredByUserId])
  @@index([status])
}

model AnalyticSalesDaily {
  id                   String   @id @default(uuid())
  restaurantId         String
  jobRunId             String
  businessDate         DateTime @db.Date
  orderCount           Int
  itemCount            Int
  grossConsumptionCents Int
  discountCents        Int
  netConsumptionCents  Int
  avgServiceTimeSeconds Int
  computedAt           DateTime @default(now())

  restaurant Restaurant      @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  jobRun     AnalyticsJobRun @relation(fields: [jobRunId], references: [id], onDelete: Cascade)

  @@index([restaurantId])
  @@index([jobRunId])
  @@index([businessDate])
}

model AnalyticItemVelocity {
  id                   String   @id @default(uuid())
  restaurantId         String
  jobRunId             String
  menuItemId           String?
  businessDate         DateTime @db.Date
  itemNameSnapshot     String
  quantitySold         Int
  grossConsumptionCents Int
  computedAt           DateTime @default(now())

  restaurant Restaurant       @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  jobRun     AnalyticsJobRun  @relation(fields: [jobRunId], references: [id], onDelete: Cascade)
  menuItem   RestaurantMenuItem? @relation(fields: [menuItemId], references: [id])

  @@index([restaurantId])
  @@index([jobRunId])
  @@index([menuItemId])
  @@index([businessDate])
}

model AnalyticServiceTimes {
  id                String   @id @default(uuid())
  restaurantId      String
  jobRunId          String
  stationId         String?
  businessDate      DateTime @db.Date
  avgPrepSeconds    Int
  p50PrepSeconds    Int
  p90PrepSeconds    Int
  delayedItemsCount Int
  computedAt        DateTime @default(now())

  restaurant Restaurant       @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  jobRun     AnalyticsJobRun  @relation(fields: [jobRunId], references: [id], onDelete: Cascade)
  station    Station?         @relation(fields: [stationId], references: [id])

  @@index([restaurantId])
  @@index([jobRunId])
  @@index([stationId])
  @@index([businessDate])
}

model AnalyticDemandEstimate {
  id                String   @id @default(uuid())
  restaurantId      String
  jobRunId          String
  menuItemId        String?
  estimateDate      DateTime @db.Date
  expectedQuantity  Int
  confidenceBps     Int?
  method            String
  computedAt        DateTime @default(now())

  restaurant Restaurant       @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  jobRun     AnalyticsJobRun  @relation(fields: [jobRunId], references: [id], onDelete: Cascade)
  menuItem   RestaurantMenuItem? @relation(fields: [menuItemId], references: [id])

  @@index([restaurantId])
  @@index([jobRunId])
  @@index([menuItemId])
  @@index([estimateDate])
}
